fix edit training session text overflow

--- a/src/app/content/train/training-session/training-session-details/training-session-details.component.scss
+++ b/src/app/content/train/training-session/training-session-details/training-session-details.component.scss
@@ -40,7 +40,7 @@ mat-expansion-panel {
   align-items: flex-start;
   gap: 16px;
 
-  margin-top: 16px;
+  margin-top: 32px;
   padding-left: 8px;
   padding-right: 8px;
 }
